<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--General; DO NOT TRANSLATE-->
    <string name="app_name" translatable="false">Paste It</string>
    <string name="version_name" translatable="false">7.0.0</string>
    <string name="tbr" translatable="false">Team BlueRidge</string>

    <!--Main UI-->
    <string name="paste_name">Paste Name</string>
    <string name="paste_content">Paste Content</string>
    <string name="paste_url_label">Paste URL</string>
    <string name="paste_no_text">Please fill in the text boxes</string>
    <string name="paste_toast">Paste URL has been copied to the clipboard.</string>
    <string name="paste_upload">Uploading paste. Please wait…</string>
    <string name="file_load">Loading file…</string>
    <string name="no_network">No network connection available</string>
    <string name="request_permissions">Please accept the permission to open files.</string>
    <string name="invalid_language">Choose another language</string>
    <string name="invalid_url">There was an error with the paste URL</string>
    <string name="invalid_api_key">The API key is invalid or incorrect for the chosen domain</string>
    <string name="error_api_key">Your API key is incorrect. Please fix it in settings.
        The only language available for uploads is Plain Text</string>

    <!--Preferences-->
    <string name="pref_general">General</string>
    <string name="pref_name">Name</string>
    <string name="pref_name_summary">Your name to be shown on pastes</string>
    <string name="pref_domain">Domain</string>
    <string name="pref_domain_summary">Domain where Stikked is installed</string>
    <string name="pref_url">Display URL</string>
    <string name="pref_url_summary">Appears under the content box</string>
    <string name="pref_api_key">API Key</string>
    <string name="pref_api_key_summary">Current key: %s</string>
    <!--%s is the current API key-->
    <string name="pref_api_key_summary_ifempty">An API key may be required for some sites</string>
    <string name="pref_default_language">Default upload language</string>
    <string name="pref_default_language_summary">Default language for uploads</string>
    <string name="pref_about">About</string>
    <string name="pref_version">Version</string>
    <string name="pref_created_by">Created By</string>
    <string name="pref_powered_by">Powered by Stikked</string>

    <!--Menu-->
    <string name="action_paste">Paste</string>
    <string name="action_settings">Settings</string>
    <string name="title_paste_list">Pastes</string>
    <string name="title_paste_detail">Paste Detail</string>

</resources>