<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_paste"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".CreatePasteFragment">

    <EditText
        android:id="@+id/paste_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textCapWords"
        android:hint="@string/paste_name">
        <requestFocus />
    </EditText>
    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>
    <EditText
        android:id="@+id/paste_content_edittext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textNoSuggestions|textMultiLine|textLongMessage"
        android:gravity="top"
        android:hint="@string/paste_content"
        android:layout_weight="1"
        android:fontFamily="monospace" />
    <TextView
        android:id="@+id/paste_url_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/paste_url_label"
        android:textStyle="bold"/>
</LinearLayout>